--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -56,41 +56,23 @@
     padding: 9px 0px;
 }
 
-.nav-btn-1,
-.nav-btn-3 {
+.nav-btn-1 {
     width: 80px;
     height: 40px;
     border-radius: 3.48px;
-    background-color: var(--bg-color-infinite-night);
-    border: 1px solid #39C6FD;
-    transition: all 350ms linear;
+    background-color: var(--color-sky-blue);
 }
 
-.nav-btn-2,
-.nav-btn-4 {
+.nav-btn-2 {
     width: 94px;
     height: 40px;
     border-radius: 4px;
     background-color: var(--bg-color-infinite-night);
     border: 1px solid #39C6FD;
-    transition: all 350ms linear;
-}
-
-.nav-btn-1:hover,
-.nav-btn-2:hover,
-.join-btn:hover,
-.nav-btn-3:hover,
-.nav-btn-4:hover {
-    background-color: var(--color-sky-blue);
-    color: var(--bg-color-infinite-night);
 }
 
 .max-w-607 {
     max-width: 607px;
-}
-
-.pb-64 {
-    padding-bottom: 64px;
 }
 
 .mt-68 {
@@ -101,9 +83,7 @@
     width: 217px;
     height: 58px;
     border-radius: 5.04px;
-    background-color: var(--bg-color-infinite-night);
-    border: 1px solid #39C6FD;
-    transition: all 350ms linear;
+    background-color: var(--color-sky-blue);
 }
 
 .layer {
@@ -111,26 +91,34 @@
 }
 
 /* section 1 */
-.app-store-btn {
-    width: 148.5px;
-    height: 44px;
-    background-color: black;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-}
-
 .triangle-svg {
     right: 0%;
-    top: -35%;
+    top: -91%;
 }
 
-.ellipse-layer {
-    /* top: 50%; */
-    left: 0%;
+.app-store {
+    transition: all 400ms linear;
+}
+
+.app-store:hover {
+    transform: translateY(-10px);
+}
+
+.max-w-627 {
+    max-width: 627px;
 }
 
 .vertical-align {
     vertical-align: baseline;
+}
+
+.phone-bg-layer {
+    top: -22%;
+    left: 19%;
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
 
 .gap-30 {
@@ -149,30 +137,68 @@
     padding-top: 6px;
 }
 
+.max-w-148 {
+    max-width: 148.55px;
+}
+
 .pl-10 {
     padding-left: 10px;
 }
 
-.box {
+/* .box {
     max-width: 148.5px;
     width: 100%;
     height: 44px;
     border: 1px solid white;
     border-radius: 4px;
-}
+} */
 
 /* slider */
-
 .max-w-632 {
     max-width: 632px;
+}
+
+.px-12 {
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
+.mt-51 {
+    margin-top: 51px;
 }
 
 .max-w-516 {
     max-width: 516px;
 }
 
-.card {
+.slider-card {
     max-width: 494px;
+    height: 461px;
+}
+
+.slick-dots {
+    bottom: -60px !important;
+}
+
+.slick-slide {
+    height: 461px !important;
+    display: flex !important;
+}
+
+.slick-track {
+    display: flex !important;
+    gap: 30px !important;
+}
+
+.slick-dots li button:before {
+    font-size: 10px !important;
+    color: var(--color-white) !important;
+    opacity: 100% !important;
+}
+
+.slick-dots li.slick-active button:before {
+    opacity: 100% !important;
+    color: var(--color-sky-blue) !important;
 }
 
 .mt-17 {
@@ -183,7 +209,7 @@
     .nav-link {
         display: flex !important;
         flex-direction: column;
-        background-color: black !important;
+        background-color: var(--bg-color-infinite-night) !important;
         width: 100%;
         min-height: 100vh;
         position: fixed;
@@ -199,30 +225,53 @@
         right: 0 !important;
     }
 
-    .nav-btn-1,
-    .nav-btn-2 {
-        display: none;
+    .mb-190 {
+        margin-bottom: 190px;
     }
-}
 
-@media (min-width:992px) {
-
-    .nav-btn-3,
-    .nav-btn-4 {
-        display: none;
+    .mb-139 {
+        margin-bottom: 139px;
     }
-}
 
-@media (max-width:530px) {
+    .mb-178 {
+        margin-bottom: 178px;
+    }
 
-    .nav-btn-3,
-    .nav-btn-4 {
-        display: none;
+    .triangle-svg {
+        top: -25%;
     }
 }
 
 @media (max-width:575.98px) {
-    .mt-24 {
-        margin-top: 24px;
+    .mt-63 {
+        margin-top: 20px;
+    }
+}
+
+@media (max-width:767.98px) {
+    .mb-190 {
+        margin-bottom: 100px;
+    }
+
+    .mb-139 {
+        margin-bottom: 100px;
+    }
+
+    .mb-178 {
+        margin-bottom: 100px;
+    }
+}
+
+@media (min-width:992px) {
+    .mb-190 {
+        margin-bottom: 190px;
+    }
+
+    .mb-139 {
+        margin-bottom: 139px;
+    }
+
+    .mb-178 {
+        margin-bottom: 178px;
     }
 }
