--- a/assests/css/root.css
+++ b/assests/css/root.css
@@ -5,12 +5,14 @@
     --color-sky-blue: #39C6FD;
     --color-infinite: #070D37;
     --color-white: #FFFFFF;
+    --fs-sm: 16px;
     --fs-md: 20px;
     --fs-xl: 48px;
     --fs-2xl: 80px;
     --lh-21: 21.79px;
     --lh-23: 23.71px;
     --lh-25: 25.15px;
+    --lh-29: 29.64px;
     --lh-71: 71.14px;
     --lh-118: 118.56px;
 }
@@ -39,6 +41,10 @@
     color: var(--color-white);
 }
 
+.fs-sm {
+    font-size: var(--fs-sm);
+}
+
 .fs-md {
     font-size: var(--fs-md);
 }
@@ -61,6 +67,10 @@
 
 .lh-25 {
     line-height: var(--lh-25);
+}
+
+.lh-29 {
+    line-height: var(--lh-29);
 }
 
 .lh-71 {
