--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -250,7 +250,6 @@
     background: var(--bg-color-infinite-night);
     border: 3px solid #39C6FD;
     border-radius: 10px;
-    padding: 65px 0px 89px 73px;
 }
 
 .max-w-582 {
@@ -277,6 +276,15 @@
 .phone-img {
     top: -34%;
     right: 41px;
+}
+
+.mb-32 {
+    margin-bottom: 32px;
+}
+
+.iphone {
+    max-width: 302.79px;
+    height: 608.46px;
 }
 
 @media (max-width:991.98px) {
@@ -322,6 +330,10 @@
     .nav-btn-3,
     .nav-btn-4 {
         display: none;
+    }
+
+    .box {
+        padding: 12px;
     }
 }
 
@@ -377,6 +389,10 @@
     .nav-btn-1,
     .nav-btn-2 {
         display: none;
+    }
+
+    .box {
+        padding: 65px 0px 89px 73px;
     }
 }
 
