--- a/assests/css/root.css
+++ b/assests/css/root.css
@@ -5,16 +5,19 @@
     --color-sky-blue: #39C6FD;
     --color-infinite: #070D37;
     --color-white: #FFFFFF;
+    --fs-small: 12px;
     --fs-sm: 16px;
     --fs-md: 20px;
     --fs-xl: 48px;
     --fs-2xl: 80px;
+    --lh-16: 16.34px;
     --lh-21: 21.79px;
     --lh-23: 23.71px;
     --lh-25: 25.15px;
     --lh-29: 29.64px;
     --lh-71: 71.14px;
     --lh-118: 118.56px;
+    --opacity-70: 70%;
 }
 
 .font-family-first {
@@ -41,6 +44,10 @@
     color: var(--color-white);
 }
 
+.fs-small {
+    font-size: var(--fs-small);
+}
+
 .fs-sm {
     font-size: var(--fs-sm);
 }
@@ -55,6 +62,10 @@
 
 .fs-2xl {
     font-size: var(--fs-2xl);
+}
+
+.lh-16 {
+    line-height: var(--lh-16);
 }
 
 .lh-21 {
@@ -79,6 +90,10 @@
 
 .lh-118 {
     line-height: var(--lh-118);
+}
+
+.opacity-70 {
+    opacity: 70%;
 }
 
 @media (max-width:575.98px) {
