--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -192,7 +192,9 @@
 }
 
 .section-3 .accordion-button {
-    padding: 52px 16px 26px 0px !important;
+    margin: 52px 16px 26px 0px !important;
+    padding: 0 !important;
+    padding-right: 16px !important;
 }
 
 .section-3 .accordion-body {
