--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,6 @@
     height: 5px;
     margin-bottom: 5px;
     display: flex;
-    z-index: 10;
     transition: all 300ms linear;
     transform-origin: left;
     border-radius: 10px;
@@ -61,8 +60,7 @@
     border-radius: 3.48px;
     background-color: var(--color-sky-blue);
     padding: 8px 20px 8px 20px;
-    border: 1px solid;
-    border-color: var(--color-sky-blue);
+    color: var(--color-infinite);
 }
 
 .nav-btn-2,
@@ -86,6 +84,7 @@
     padding: 14px 27px 14px 27px;
     border-radius: 5.04px;
     background-color: var(--color-sky-blue);
+    color: var(--color-infinite);
 }
 
 .layer {
