--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,12 +55,60 @@
     padding: 9px 0px;
 }
 
+.text-hover-2 {
+    background-image: linear-gradient(to right,
+            white 50%,
+            #39C6FD 50%);
+    background-size: 200% 100%;
+    background-position: -100%;
+    padding: 5px 0;
+    position: relative;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: all 0.3s ease-in-out;
+}
+
+.text-hover {
+    background-image: linear-gradient(to right,
+            #39C6FD 50%,
+            white 50%);
+    background-size: 200% 100%;
+    background-position: -100%;
+    padding: 5px 0;
+    position: relative;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: all 0.3s ease-in-out;
+}
+
+.text-hover::before,
+.text-hover-2::before {
+    content: '';
+    background: #54b3d6;
+    position: absolute;
+    bottom: -3px;
+    width: 0;
+    height: 3px;
+    transition: all 0.3s ease-in-out;
+}
+
+.text-hover:hover,
+.text-hover-2:hover {
+    background-position: 0;
+}
+
+.text-hover:hover::before,
+.text-hover-2:hover::before {
+    width: 100%;
+}
+
 .nav-btn-1,
 .nav-btn-3 {
     border-radius: 3.48px;
     background-color: var(--color-sky-blue);
-    padding: 8px 20px 8px 20px;
+    padding: 8.5px 20px 8.5px 20px;
     color: var(--color-infinite);
+    transition: all 200ms linear;
 }
 
 .nav-btn-2,
@@ -70,6 +118,20 @@
     background-color: var(--bg-color-infinite-night);
     border: 1px solid;
     border-color: var(--color-sky-blue);
+    transition: all 300ms linear;
+}
+
+.nav-btn-1:hover,
+.nav-btn-3:hover,
+.join-btn:hover,
+.join-btn-2:hover {
+    color: var(--color-white);
+}
+
+.nav-btn-2:hover,
+.nav-btn-4:hover {
+    background-color: var(--color-white);
+    border-color: var(--color-white);
 }
 
 .max-w-607 {
@@ -85,6 +147,7 @@
     border-radius: 5.04px;
     background-color: var(--color-sky-blue);
     color: var(--color-infinite);
+    transition: all 200ms linear;
 }
 
 .layer {
@@ -257,7 +320,8 @@
     border: none;
     background: var(--color-sky-blue);
     color: var(--color-infinite);
-    border-radius: 4px
+    border-radius: 4px;
+    transition: all 200ms linear;
 }
 
 .phone-img {
@@ -306,7 +370,7 @@
 }
 
 .bg-img-3 {
-    background-image: url(/assests/images/png/footer-bg-img.png);
+    background-image: url(../images/png/footer-bg-img.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
