--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,8 +173,9 @@
 }
 
 .phone-bg-layer {
-    top: -22%;
-    left: 19%;
+    top: -58%;
+    left: -31%;
+    filter: blur(60px)
 }
 
 .cursor-pointer {
@@ -234,8 +235,8 @@
     max-width: 680px;
 }
 
-.max-w-810 {
-    max-width: 810px;
+.max-w-830 {
+    max-width: 830px;
 }
 
 .pt-12 {
@@ -256,11 +257,12 @@
 .section-3 .accordion-button {
     margin: 52px 16px 26px 0px !important;
     padding: 0 !important;
-    padding-right: 16px !important;
+    padding-right: 16px !important;  
 }
 
 .section-3 .accordion-body {
     padding-top: 0 !important;
+    padding-left: 40px;
 }
 
 .line {
@@ -279,6 +281,10 @@
     background-image: url(../images/svg/arrow-img.svg);
     background-position: center;
     background-size: contain;
+}
+
+.pr-13 {
+    padding-right: 13.98px;
 }
 
 .left-triangle {
