--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,9 +255,8 @@
 }
 
 .section-3 .accordion-button {
-    margin: 52px 16px 26px 0px !important;
+    margin: 52px 0px 26px 0px !important;
     padding: 0 !important;
-    padding-right: 16px !important;
 }
 
 .section-3 .accordion-body {
@@ -380,6 +379,12 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+}
+
+@media (min-width:576px) {
+    .section-3 .accordion-button {
+        padding-right: 16px !important;
+    }
 }
 
 @media (max-width:991.98px) {
