--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -1,15 +1,19 @@
 :root {
+    /***** font family *****/
     --font-family-first: "Oswald", serif;
     --font-family-second: "Open Sans", serif;
+    /***** colors *****/
     --bg-color-infinite-night: #070D37;
     --color-sky-blue: #39C6FD;
     --color-infinite: #070D37;
     --color-white: #FFFFFF;
+    /***** font size *****/
     --fs-small: 12px;
     --fs-sm: 16px;
     --fs-md: 20px;
     --fs-xl: 48px;
-    --fs-2xl: 80px; 
+    --fs-2xl: 80px;
+    /***** line height *****/
     --lh-16: 16.34px;
     --lh-21: 21.79px;
     --lh-23: 23.71px;
@@ -17,9 +21,11 @@
     --lh-29: 29.64px;
     --lh-71: 71.14px;
     --lh-118: 118.56px;
+    /***** opacity *****/
     --opacity-70: 70%;
 }
 
+/***** font family *****/
 .font-family-first {
     font-family: var(--font-family-first);
 }
@@ -28,6 +34,7 @@
     font-family: var(--font-family-second);
 }
 
+/***** colors *****/
 .bg-color-infinite-night {
     background-color: var(--color-infinite-night);
 }
@@ -44,6 +51,7 @@
     color: var(--color-white);
 }
 
+/***** font size *****/
 .fs-small {
     font-size: var(--fs-small);
 }
@@ -64,6 +72,7 @@
     font-size: var(--fs-2xl);
 }
 
+/***** line height *****/
 .lh-16 {
     line-height: var(--lh-16);
 }
@@ -92,10 +101,12 @@
     line-height: var(--lh-118);
 }
 
+/***** opacity *****/
 .opacity-70 {
     opacity: 70%;
 }
 
+/***** media screen max-width *****/
 @media (max-width:575.98px) {
     :root {
         --fs-2xl: 50px;
